# soma-play

./: .gitignore  CRATES_IO_AUTOMATION.md  Cargo.toml  GITHUB_403_FIXES.md  GITHUB_ACTIONS_TROUBLESHOOTING.md  LICENSE-APACHE  LICENSE-MIT  README.md  build-docs.sh  build.sh  generate-sbom.sh  install.sh
.github/workflows/: build.yml  docs.yml  sbom.yml
docs/: book.toml
docs/book/: 404.html  api.html  architecture.html  command-line.html  config-options.html  configuration.html  contributing.html  controls.html  index.html  installation.html  print.html  searchindex.js  toc.html  toc.js  troubleshooting.html  usage.html
docs/src/: SUMMARY.md  api.md  architecture.md  command-line.md  config-options.md  configuration.md  contributing.md  controls.md  installation.md  introduction.md  troubleshooting.md  usage.md
sbom/: README.md  dependencies-structured.txt  dependencies.txt  sbom-cyclonedx.json  sbom-cyclonedx.xml  security-audit.txt
src/: errors.rs  lib.rs  logging.rs  main.rs
src/api/: mod.rs  somafm.rs
src/audio/: player.rs
src/config/: settings.rs
src/models/: channel.rs  mod.rs  spectrum.rs  track.rs
src/ui/: app.rs  channel_list.rs  events.rs  mod.rs  player.rs  spectrum.rs
