[package]
name = "soma-player"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rodio = "0.19"
tokio = { version = "1.38", features = ["full"] }
symphonia = { version = "0.5.3", features = ["mp3"] } 
futures-util = { version = "0.3" }
bytes = "1.0"
tokio-util = { version = "0.7", features = ["io-util"] }
crossterm = "0.27"
icy-metadata = "0.2"
stream-download = { version = "0.10", features = ["reqwest"] }
colored = "2.0"
unicode-width = "0.1"
