[package]
name = "soma-player"
version = "0.1.5"
edition = "2024"

# Add these for better release builds
[profile.release]
opt-level = 3        # Maximum optimization
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization
panic = "abort"     # Smaller binary size
strip = true        # Remove debug symbols

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rodio = "0.19"
tokio = { version = "1.38", features = ["full"] }
symphonia = { version = "0.5.3", features = ["mp3"] } 
futures-util = { version = "0.3" }
bytes = "1.0"
tokio-util = { version = "0.7", features = ["io-util"] }
crossterm = "0.27"
icy-metadata = "0.2"
stream-download = { version = "0.10", features = ["reqwest"] }
ratatui = "0.28"
color-eyre = "0.6"
toml = "0.8"
dirs = "5.0"
log = "0.4"
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
rand = "0.8"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
