[package]
name = "soma-player"
version = "0.1.7"
edition = "2024"
authors = ["Marco Puccini <mpuccini@example.com>"]
description = "A terminal-based music player for SomaFM internet radio stations with spectrum visualizer"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mpuccini/soma-play"
homepage = "https://github.com/mpuccini/soma-play"
documentation = "https://mpuccini.github.io/soma-play/"
readme = "README.md"
keywords = ["music", "radio", "terminal", "tui", "somafm"]
categories = ["multimedia::audio", "command-line-utilities"]
exclude = [
    "/.github/",
    "/docs/",
    "/site/",
    "/sbom/",
    "*.sh",
    ".gitignore"
]

# Add these for better release builds
[profile.release]
opt-level = 3        # Maximum optimization
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization
panic = "abort"     # Smaller binary size
strip = true        # Remove debug symbols

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rodio = "0.19"
tokio = { version = "1.38", features = ["full"] }
symphonia = { version = "0.5.3", features = ["mp3"] } 
futures-util = { version = "0.3" }
bytes = "1.0"
tokio-util = { version = "0.7", features = ["io-util"] }
crossterm = "0.27"
icy-metadata = "0.2"
stream-download = { version = "0.10", features = ["reqwest"] }
ratatui = "0.28"
color-eyre = "0.6"
toml = "0.8"
dirs = "5.0"
log = "0.4"
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
rand = "0.8"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
